--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ nav{
     font-weight: bold;
 }
 #welcome-section,#about,#contact,#projects{
-    height: 100vh;
+   
     padding-top: 40vh;
     padding-left: 30vh;
     padding-right: 5vh;
@@ -190,10 +190,6 @@ nav{
     opacity: 100%;
     background-color: rgb(30, 45, 67);
 }
-.proj-img:hover{
-    width: 20%;
-    animation: enlarge 0.2s 1 ease-in forwards;  
-}
 
 .description{
     color: var(--secondary-color);
@@ -227,7 +223,7 @@ nav{
 }
 
 .my-img{
-    height: 50%;
+    height: 50vh;
     display: inline-block;
 }
 #resume{
@@ -248,6 +244,7 @@ nav{
     padding-top: 0;
 }
 #resume h3,h5{
+    margin-top: 5px;
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -258,4 +255,35 @@ nav{
 h5 a{
     color: white;
     text-decoration: none;
+}
+@media (max-width: 800px){
+    #about{
+        display: grid;
+    }
+    .my-img{
+        height: 20vh;
+        display: grid;
+    }
+    .proj{
+        display: grid;
+    }
+    .proj-img{
+        width: 100%;
+    }
+    .description{
+        width: 100%;
+    }
+    .separator{
+        display: grid;
+        padding: 2vh 2vw;
+    }
+    .separator :nth-child(2){
+        color: white;
+    }
+    #about .intro-text{
+        width: 100%;
+    }
+    .bound{
+        width: 100%;
+    }
 }
