--- a/styles.css
+++ b/styles.css
@@ -289,4 +289,10 @@ h5 a{
     header{
         align-items: center;
     }
+    nav{
+        margin-right: 10px;
+    }
+    #welcome-section{
+        padding-right: 0;
+    }
 }
