fix positioning for side bar

--- a/styles.css
+++ b/styles.css
@@ -295,4 +295,8 @@ h5 a{
     #welcome-section{
         padding-right: 0;
     }
+    #welcome-section,#about,#contact,#projects,#resume{
+   
+        padding-left: 15vh;
+    }
 }
